# Dotto

./: .gitignore  .gitmodules  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  Makefile  Makefile.3ds  Makefile.wasm  README.md  SECURITY.md  compile_flags.txt  package  package_macosx  package_win.js  settings.ini
.github/: issues_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp-emscripten.yml  c-cpp-linux-x86_64.yml  c-cpp-macos-x86_64.yml  c-cpp-windows-i686.yml  nintendo-3ds.yml
android/: build.gradle  settings.gradle
android/SDL2/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/SDL2_gfx/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/SDL2_image/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/SDL2_jpeg/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/SDL2_mixer/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/SDL2_png/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/SDL2_ttf/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/app/: build.gradle
android/freetype/: CMakeLists.txt  build.gradle  cmake_install.cmake
android/freetype/include/: ftmodule.h
android/freetype/include/freetype/config/: ftoption.h
android/main/: CMakeLists.txt  SDL_android_main.c  build.gradle  example.cpp  extractAssets.cpp
data/: Dotto.desktop  craft_speederA.mtl  scratchpad.js  settings.ini  test.js  test.lua  test2.js
data/autorun/: 0-readme.duk  0-tool-dropper.lua  0-tool-square.js  1-boot.js  100-color-panel.duk  100-tool-colorwheel.js  100-tool-dropper.duk  100-tool-dropper.lua  100-tool-hand.duk  100-tool-hand.js  100-tool-spray.js
data/fonts/: LavishlyYours-License.txt  Righteous-License.txt  Updock-License.txt
data/gui/: MainWindow.xml  button.xml
data/i18n/: all.ini  de_DE.ini  en.ini  es.ini  id.ini  it.ini  it_IT.ini  it_IT_furlan.ini  it_IT_neapolitan.ini  it_IT_sicilian.ini  it_IT_venetian.ini  mt.ini  mt_MT.ini  pl.ini  portuguese.ini  pt.ini  pt_BR.ini  pt_PT.ini  ru.ini  template.ini
data/icc/: sRGB.icc
data/scripts/: colorpicker.js  newfilepopup.duk  newfilepopup.js
docs/: Overview.md  Themes.md  Translation.md
emscripten/: index.html
libs/EasyTab/: easytab.h
libs/duktape/: README.rst  duk_config.h  duktape.c  duktape.h
libs/httprequest/: HTTPRequest.hpp
libs/stb_truetype/: stb_truetype.h
libs/tinyfiledialogs/: LICENSE.txt  tinyfiledialogs.c
libs/tinyxml2/: tinyxml2.cpp
linux-x64/lib/: libicui18n.so.70.1  libicuuc.so.70.1
plugins/: MessagePump.hpp  build.sh  fmt.hpp  init.cpp  init.d  link.ld
plugins/parsejpg/: link_flags.txt  parsejpg.cpp  parsejpg.drt  settings.ini
plugins/parseobj/: obj.hpp  parseobj.cpp  parseobj.drt
plugins/parsepng/: link_flags.txt  parsepng.cpp  parsepng.drt
plugins/test/: test.cpp  test.drt
ports/include/: API.hpp  fmt.hpp  jconfig.h  pnglibconf.h
src/: App.hpp  Boot.hpp  CircleBuffer.hpp  ConsoleLog.hpp  Events.hpp  GLComponentRenderData.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.hpp  Graphics.hpp  Index.hpp  Log.hpp  MainThread.hpp  Material.cpp  Material.hpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  MeshAttribute.hpp  Model.cpp  Model.hpp  ModelAPI.cpp  Node.cpp  Node.hpp  SDL2Graphics.hpp  SDLLog.hpp  Shared.hpp  String.cpp  String.hpp  Surface.cpp  Surface.hpp  Uniform.hpp  VM.cpp  VM.hpp  VMImpl.hpp  VMPool.hpp  Vector.hpp  main.cpp
src/app/: App.cpp  App.hpp
src/blender/: Blender.hpp  Darken.cpp  Erase.cpp  HardLight.cpp  Lighten.cpp  Multiply.cpp  Normal.cpp  Overlay.cpp  Screen.cpp  SoftLight.cpp
src/cmd/: ActivateColor.cpp  ActivateFilter.cpp  ActivateLayer.cpp  ActivateTool.cpp  AddLayer.cpp  CloseFile.cpp  Command.hpp  DeleteLayer.cpp  IncreaseToolSize.cpp  LoadPalette.cpp  NewFile.cpp  OpenFile.cpp  Paint.cpp  Print.cpp  Quit.cpp  Recording.cpp  Redo.cpp  SaveFile.cpp  SelectAll.cpp  SelectNone.cpp  SetCellProperty.cpp  ToggleGrid.cpp  ToggleIDE.cpp  ToggleTool.cpp  ToggleUI.cpp  Undo.cpp  Zoom.cpp
src/common/: Color.cpp  Color.hpp  ColorProfile.hpp  Config.cpp  Config.hpp  Font.cpp  Font.hpp  FunctionRef.hpp  Messages.hpp  Octree.hpp  Parser.hpp  Profiler.cpp  Profiler.hpp  PropertySet.hpp  PubSub.hpp  Rect.hpp  String.cpp  String.hpp  Surface.cpp  Surface.hpp  System.hpp  Value.hpp  Window.hpp  Writer.cpp  Writer.hpp  XML.hpp  fork_ptr.hpp  inject.hpp  line.hpp  match.hpp  types.hpp
src/doc/: BitmapCell.cpp  BitmapCell.hpp  Cell.cpp  Cell.hpp  Document.cpp  Document.hpp  GroupCell.cpp  GroupCell.hpp  Palette.cpp  Palette.hpp  Selection.cpp  Selection.hpp  Surface.hpp  Timeline.cpp  Timeline.hpp
src/filters/: Blur.cpp  CanvasResize.cpp  DropShadow.cpp  Filter.hpp  Flip.cpp  Mirror.cpp  NearestNeighbor.cpp  Scale2x.cpp
src/fs/: Cache.cpp  Cache.hpp  FSEntity.cpp  FSEntity.hpp  File.hpp  FileDialog.hpp  FileSystem.cpp  FileSystem.hpp  Folder.cpp  Folder.hpp  StdFile.hpp
src/gui/: Controller.cpp  Controller.hpp  EventHandler.hpp  Events.cpp  Events.hpp  Flow.cpp  Flow.hpp  GLGraphics.hpp  Graphics.hpp  Image.cpp  Node.cpp  Node.hpp  Rect.hpp  Span.cpp  Texture.hpp  Unit.hpp  Window.cpp  Window.hpp
src/layer/: BitmapLayer.cpp  GroupLayer.cpp  Layer.hpp
src/log/: AndroidLog.cpp  ConsoleLog.cpp  Log.hpp
src/parsers/: GPLParser.cpp  ICCParser.cpp  IniParser.cpp  PALParser.cpp  PngParser.cpp  QoiParser.cpp  SDLImageParser.cpp  SDLTTFParser.cpp  STBTTFParser.cpp  ScriptParser.cpp  TTFParser.cpp  TXTParser.cpp  XmlParser.cpp
src/script/: Engine.hpp  Function.hpp  ScriptObject.cpp  ScriptObject.hpp  Value.cpp  Value.hpp
src/sdl1/: FileOps.hpp  SDL1System.cpp  SDL1Window.cpp  SDLGraphics.hpp  SoftStretchAlpha.cpp
src/sdl2/: FileOps.hpp  SDL2Image.hpp  SDL2System.cpp  SDL2Window.cpp
src/sys/: NativeWindowPlugin.hpp
src/task/: GreenTaskManager.cpp  TaskManager.hpp  ThreadedTaskManager.cpp
src/texttransform/: Capitalize.cpp  Replace.cpp  Round.cpp  TextTransform.hpp  ToLower.cpp  ToUpper.cpp  Translate.cpp
src/tools/: Bucket.cpp  Eraser.cpp  Marquee.cpp  Move.cpp  Pencil.cpp  Pencil.hpp  Script.cpp  Tool.cpp  Tool.hpp
(+148 files in other folders)
